2009-12-26 Jordi Mallach <jordi@gnu.org>
	* doc/man/nano.1: Avoid a groff warning by prepending a zero-width
	space to a line starting with '.

2009-12-22 Chris Allegretta <chrisa@asty.org>
	* files.c (write_file): Fix compatibility with previous stat fix and tiny mode.

2009-12-22 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c: Add new strings for forward/back in the file browser.  New variables
	  nano_forwardfile_msg and nano_backfile_msg.

2009-12-20 Chris Allegretta <chrisa@asty.org>
	* files.c (is_file_writable): remove assert check for f, since it's not
	  initialized at the time.  Fixes Savannah bug 28309, reported by Zoltan Kovacs.

2009-12-20 Brian Szymanski <skibrianski via Savannah>
	* src/files.c (write_file): Check stat struct exists, and if not use just obtained stat data.
	  Fixes Ubuntu bug 471568, "reproducible crash in nano on trying to save to a file 
	  different than the one specified on the command line".

2009-12-15 Chris Allegretta <chrisa@asty.org>
	* doc/nanorc.sample.in - Remove erroneous 'set suspendenable' as it's actually a 
	  key binding (e.g. 'bind M-Z suspendenable all') and not a settable flag.  Fixes
	  Savannah bug 28299 reported by Mike Frysinger.

GNU nano 2.2.1 - 2009.12.12
2009-12-12 Chris Allegretta <chrisa@asty.org>
	* text.c (do_delete), nano.c (do_output): Add check for length of current line 
	  before and after adding/deleting text, and do full refresh if it is now
	  a different multiple of COLS.  Also get rid of superfluous do_refresh
	  vars now that we have edit_refresh_needed.

2009-12-09 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c (shortcut_init), browser.c (do_browser): Fix M-W not being bound to 
	  research in either main menu or browser.

2009-12-09 Chris Allegretta <chrisa@asty.org>
	* files.c (read_file) - Add parameter for whether we should even try to check
	  file writability, as the message is useless when we're inserting into an 
	  existing buffer.  Fixes Savannah bug 28219.
